añadido en empresas: cerrar, crear, editarempleado, miempresa, repartirdividendos